Fix style breakage not showing inside ion-item when vendorised

--- a/src/auto-complete.scss
+++ b/src/auto-complete.scss
@@ -8,8 +8,8 @@ ion-auto-complete {
   }
 
   ul {
-    position:        absolute;
-    width:           90vw;
+    // position:        absolute;
+    width:           100%;
     margin-top:      0;
     background:      #FFF;
     list-style-type: none;
